amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/recursive-directive-direct.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/recursive-directive-direct.graphql
Profile: GraphQL
Conforms: true
Number of results: 0
